Bug 109135 - SIDEBAR: Keyboard shortcuts don't work when a sidebar element is active
Summary: SIDEBAR: Keyboard shortcuts don't work when a sidebar element is active
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.4.2 release
Hardware: All All
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2017-07-15 11:09 UTC by Kenneth Hanson
Modified: 2024-02-22 07:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kenneth Hanson 2017-07-15 11:09:36 UTC
Description:
The problem occurs with style names, dropdown menus, and some other widgets. Spinners like font size are a notable exception. Seems to be a universal UI problem: it's been annoying me in Writer, but I briefly confirmed it in Calc, Impress, and Draw.

Steps to Reproduce:
1. Open the side bar and single-click a style name or other element. The element should be highlighted and have a dotted border to show that it is active.
2. Attempt to use keyboard shortcut.

Actual Results:  
Nothing happens.

Expected Results:
Command bound to shortcut is activated.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0
Comment 1 Kenneth Hanson 2017-07-15 13:09:10 UTC
An additional finding. In the case of the styles menu, the letter key component of the shortcut is being used to move the selection, so for example ctrl+C selects "Caption" if the paragraph style tab is open.
Comment 2 Buovjaga 2017-08-20 13:14:30 UTC
Actually the situation with the sidebar seems to be better than the old fashioned toolbars: if you are in the font size of the formatting toolbar, shortcuts do not work.

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha0+
Build ID: 668ab2e739397e6b095372a1a468bd4f515927b6
CPU threads: 8; OS: Linux 4.12; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 20th 2017
Comment 3 Drew Jensen 2018-07-06 17:13:05 UTC
*** Bug 118589 has been marked as a duplicate of this bug. ***
Comment 4 Drew Jensen 2018-07-06 17:15:11 UTC
Marked as duplicate a new issue.

This one was dealing with the F1 key not triggering the Help system.
Comment 5 QA Administrators 2019-07-07 03:39:49 UTC Comment hidden (obsolete)
Comment 6 Kenneth Hanson 2019-11-02 03:15:53 UTC
Upon quick testing, the problem seems to be partially solved as of v6.3.2.2.

For each test, I single-clicked a style in the sidebar and then pressed a key combo.

Ctrl-C copied text. F1 opened help. Ctrl-M removed formatting. Ctrl-Shift-M removed character styles.

Ctrl-0 DID NOT set the paragraph style. Nor did Ctrl-1. But they DID work immediately after *double clicking* to apply a style, and other shortcuts such as Ctrl-2 and Ctrl-3 DID work after either a single or double click.

This seemed crazy, so I tried several times, but the effect seems consistent.

The properties sidebar seems to be doing better: all style shortcuts worked.
Comment 7 Buovjaga 2019-11-02 07:50:20 UTC
(In reply to Kenneth Hanson from comment #6)
> Upon quick testing, the problem seems to be partially solved as of v6.3.2.2.
> 
> For each test, I single-clicked a style in the sidebar and then pressed a
> key combo.
> 
> Ctrl-C copied text. F1 opened help. Ctrl-M removed formatting. Ctrl-Shift-M
> removed character styles.
> 
> Ctrl-0 DID NOT set the paragraph style. Nor did Ctrl-1. But they DID work
> immediately after *double clicking* to apply a style, and other shortcuts
> such as Ctrl-2 and Ctrl-3 DID work after either a single or double click.
> 
> This seemed crazy, so I tried several times, but the effect seems consistent.
> 
> The properties sidebar seems to be doing better: all style shortcuts worked.

Jim: you've done a lot of work on sidebar and key focus. It seems probable that your work has caused the improvements Kenneth is seeing here. What is your take on this?

I have to note that contrary to Kenneth's results, Ctrl-2 and 3 do not have an effect when I am focused on a style in the list.
Comment 8 Jim Raykowski 2019-11-04 06:45:29 UTC
I was a bit confused about the Style in the sidebar but then realized that Kenneth is referring to the Properties deck Style panel paragraph style combo box  and not the Style deck style tree list. I confirm all is working when focus is in the combo box even Ctrl-0 and Ctrl-1 which respectively select and apply Text Body and Heading 1 for me. tdf#125525 changed shortcut keys to work from the sidebar.
Comment 9 Buovjaga 2019-11-04 09:19:37 UTC
(In reply to Jim Raykowski from comment #8)
> I was a bit confused about the Style in the sidebar but then realized that
> Kenneth is referring to the Properties deck Style panel paragraph style
> combo box  and not the Style deck style tree list. I confirm all is working
> when focus is in the combo box even Ctrl-0 and Ctrl-1 which respectively
> select and apply Text Body and Heading 1 for me. tdf#125525 changed shortcut
> keys to work from the sidebar.

Hmm, but based on the description "Open the side bar and single-click a style name or other element. The element should be highlighted and have a dotted border to show that it is active" I understood it to be the "Styles" deck.

In comment 6 he says "The properties sidebar seems to be doing better: all style shortcuts worked".
Comment 10 Kenneth Hanson 2019-11-05 00:02:17 UTC
Buovjaga is correct. When I said:

> For each test, I single-clicked a style in the sidebar and then pressed a key combo.

I did indeed mean the styles deck of the sidebar.
Comment 11 Jim Raykowski 2019-11-05 05:06:58 UTC
Ok the Ctrl-C, Ctrl-M and Ctrl-Shift-M threw me off. I don't know how they would work when focus is in a tree list box.

Here is a patch that allows shortcut keys to work that are able to work from a tree list box context. For Writer common keyboard customization shortcut keys are Ctrl-0 Text Body, Ctrl-1 Heading 1, Ctrl-2 Heading 2, Ctrl-3 Heading 3. The patch allows these to work.

https://gerrit.libreoffice.org/#/c/82049/
Comment 12 Commit Notification 2019-11-05 06:26:35 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c47834b494f9b94fb34e0305d106cf498a3cec81

tdf#109135 Don't handle Ctrl key in SvTreeListBox HandleKeyInput

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2020-01-20 14:33:00 UTC
A polite ping to Jim Raykowski:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Otherwise, Could you please explain what's missing?
Thanks