tdf#109135 Don't handle Ctrl key in SvTreeListBox HandleKeyInput

This patch allows shortcut keys to work when focus is in tree list box

Change-Id: Id47e004276c5f56f44c404c2d39d62dacbe234ee
Reviewed-on: https://gerrit.libreoffice.org/82049
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>